--- a/src/app/modules/test-list/test-list.component.html
+++ b/src/app/modules/test-list/test-list.component.html
@@ -2,7 +2,7 @@
     <h2 class="title"><i class="anticon anticon-profile"></i> Danh sách đề thi</h2>
 </div>
 <nz-divider></nz-divider>
-<div class="test-list">
+<div class="test-list" [@fadeInAnimation]>
     <div nz-row *ngFor="let group of TEST_LIST" class="test-group">
         <div class="test-item" *ngFor="let test of group" (click)="goToTest()">
             <h4 class="test-name">{{ test.name }}</h4>
