--- a/src/app/modules/test/test.component.html
+++ b/src/app/modules/test/test.component.html
@@ -1,30 +1,43 @@
 <div class="question" *ngFor="let question of QUESTIONS">
-    <h4 class="title">Câu {{ question.id }}</h4>
-    <div>
+    <h4 class="title">Câu {{ question.id }} <i (click)="setStep(question.id, question.type, 2)" *ngIf="question.step === 3" class="anticon anticon-retweet"></i></h4>
+    <div *ngIf="question.step === 1" class="start">
+        <button nz-button nzGhost nzType="primary" (click)="setStep(question.id, question.type, 2)"><i class="anticon anticon-caret-right"></i> Bắt đầu</button>
+    </div>
+    <div *ngIf="question.step > 1" [@fadeInAnimation]>
         <div class="image-question" *ngIf="question.type === 'image'">
-            <img [src]="question.url"/>
-            <div class="options">
-                <nz-radio-group class="radio-group">
-                    <div nz-row *ngFor="let group of question.options" class="group">
-                        <label class="option" *ngFor="let option of group" nz-radio [ngStyle]="style" [nzValue]="option.name">
-                            <button nz-button nzType="default" (click)="playAudio(option.url)"><i class="anticon anticon-play-circle-o"></i></button>
-                        </label>
-                    </div>
-                </nz-radio-group>
+            <div *ngIf="question.step === 2" [@fadeInAnimation]>
+                <img [src]="question.url"/>
+            </div>
+            <div *ngIf="question.step === 3">
+                <img [src]="question.url"/>
+                <div class="options">
+                    <nz-radio-group class="radio-group">
+                        <div nz-row *ngFor="let group of question.options" class="group">
+                            <label class="option" *ngFor="let option of group" nz-radio [ngStyle]="style" [nzValue]="option.name">
+                                <button nz-button nzType="default" (click)="playAudio(option.url)"><i class="anticon anticon-play-circle-o"></i></button>
+                            </label>
+                        </div>
+                    </nz-radio-group>
+                </div>
             </div>
         </div>
         <div class="audio-question" *ngIf="question.type === 'audio'">
-            <div>
-                <button nz-button nzType="default" (click)="playAudio(question.url)"><i class="anticon anticon-play-circle-o"></i></button>
-            </div>
-            <div class="options">
-                <nz-radio-group class="radio-group">
-                    <div nz-row *ngFor="let group of question.options" class="group">
-                        <label class="option" *ngFor="let option of group" nz-radio [ngStyle]="style" [nzValue]="option.name">
-                            <img [src]="option.url"/>
-                        </label>
-                    </div>
-                </nz-radio-group>
+            <ng-container *ngIf="question.step === 2">
+                <img src="/assets/images/chair.jpg" class="demo-image"/>
+            </ng-container>
+            <div *ngIf="question.step === 3" [@fadeInAnimation]>
+                <div>
+                    <button nz-button nzType="default" (click)="playAudio(question.url)"><i class="anticon anticon-play-circle-o"></i></button>
+                </div>
+                <div class="options">
+                    <nz-radio-group class="radio-group">
+                        <div nz-row *ngFor="let group of question.options" class="group">
+                            <label class="option" *ngFor="let option of group" nz-radio [ngStyle]="style" [nzValue]="option.name">
+                                <img [src]="option.url"/>
+                            </label>
+                        </div>
+                    </nz-radio-group>
+                </div>
             </div>
         </div>
         <div class="video-question" *ngIf="question.type === 'video'">
