--- a/src/app/modules/test/test.component.scss
+++ b/src/app/modules/test/test.component.scss
@@ -12,6 +12,12 @@
     margin-bottom: 30px;
     .title {
         color: #389BFF;
+        display: flex;
+        justify-content: space-between;
+        i {
+            font-size: 20px;
+            cursor: pointer;
+        }
     }
 }
 .group {
@@ -47,6 +53,9 @@
     img {
         width: calc(100% - 20px);
         height: 220px;
+        &.demo-image {
+            height: 400px;
+        }
     }
 
     .option:first-child {
@@ -112,4 +121,8 @@
 .info-text {
     font-weight: bold;
     color: #389bff;
+}
+
+.start {
+    text-align: center;
 }
